--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         <div class="overlay-grid">
             <!-- 1) พอร์ตนี้ (หลัก) -->
             <article class="zoom-card featured">
-                <a class="media" href="LIVE_LINK_1" target="_blank" rel="noopener">
+                <a class="media" href="https://watchrapol.github.io/Portfolio/" target="_blank" rel="noopener">
                     <img src="images/Portfolio-html-css-Js.png" alt="AuyDev Portfolio (HTML/CSS/JS)">
                 </a>
                 <div class="overlay">
@@ -366,8 +366,8 @@
                         clean, extensible code.
                     </p>
                     <div class="actions">
-                        <a class="btn" href="LIVE_LINK_1" target="_blank" rel="noopener">Live ↗</a>
-                        <a class="btn" href="CODE_LINK_1" target="_blank" rel="noopener">Code</a>
+                        <a class="btn" href="https://watchrapol.github.io/Portfolio/" target="_blank" rel="noopener">Live ↗</a>
+                        <a class="btn" href="https://github.com/Watchrapol/Portfolio.git" target="_blank" rel="noopener">Code</a>
                     </div>
                 </div>
             </article>
@@ -431,8 +431,8 @@
                         <li>
                             <i class="bx bx-envelope"></i>
                             <a id="mailtoLink"
-                                href="mailto:you@example.com?subject=Hello%20Auy&body=Hi%20Auy%2C%0A">watcharapol.m@ku.th</a>
-                            <button class="chip copy-email" type="button" data-copy="you@example.com">Copy</button>
+                                href="mailto:watcharapol.m@ku.th?subject=Hello%20Auy&body=Hi%20Auy%2C%0A">watcharapol.m@ku.th</a>
+                            <button class="chip copy-email" type="button" data-copy="watcharapol.m@ku.th">Copy</button>
                         </li>
                         <li>
                             <i class="bx bx-map"></i>
