--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
                 </p>
             </div>
             <div class="buttons rerun">
-                <a href="View GitHub" class="btn">View GitHub</a>
-                <a href="View Projects" class="btn"><i class="bx bx-code-alt"></i> View Projects
+                <a href="https://github.com/Watchrapol" class="btn">View GitHub</a>
+                <a href="#projects" class="btn"><i class="bx bx-code-alt"></i> View Projects
                 </a>
             </div>
         </div>
@@ -504,9 +504,49 @@
 
 
 
-    <footer>
-        <p class="footer rerun">&copy; 2025 Watcharapol</span></p>
-    </footer>
+   <footer id="footer" class="site-footer">
+  <div class="footer-grid">
+    <!-- Brand / About -->
+    <div class="footer-col">
+      <div class="logo">AuyDev</div>
+      <p class="th">พอร์ตโฟลิโอของอุ้ย — โฟกัสเว็บที่ใช้งานง่าย เร็ว และเข้าถึงได้</p>
+      <p class="en">Auy’s portfolio — focused on usable, fast, and accessible web.</p>
+
+      <ul class="mini-list">
+        <li><span>Alumni:</span> Kasetsart University (KU CSC)</li>
+        <li><span>Based in:</span> Sakon Nakhon, Thailand</li>
+      </ul>
+    </div>
+
+    <!-- Quick Links -->
+    <nav class="footer-col">
+      <h4 class="gradient-text">Links</h4>
+      <ul class="link-list">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Portfolio</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+
+    <!-- Contact -->
+    <div class="footer-col">
+      <h4 class="gradient-text">Contact</h4>
+      <ul class="info-list">
+        <li><a href="mailto:you@example.com">you@example.com</a></li>
+        <li><a href="https://github.com/your-github" target="_blank" rel="noopener">GitHub</a></li>
+        <li><a href="https://www.linkedin.com/in/your-linkedin" target="_blank" rel="noopener">LinkedIn</a></li>
+      </ul>
+      <div class="footer-actions">
+        <button class="btn outline back-to-top" type="button">↑ Back to top</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <small>© <span id="year"></span> Watcharapol Mattayatsuk · Built by hand with HTML/CSS/JS</small>
+  </div>
+</footer>
 
 </body>
 
