--- a/index.html
+++ b/index.html
@@ -502,14 +502,12 @@
         </div>
     </section>
 
-
-
    <footer id="footer" class="site-footer">
   <div class="footer-grid">
     <!-- Brand / About -->
     <div class="footer-col">
       <div class="logo">AuyDev</div>
-      <p class="th">พอร์ตโฟลิโอของอุ้ย — โฟกัสเว็บที่ใช้งานง่าย เร็ว และเข้าถึงได้</p>
+      <p class="th">พอร์ตโฟลิโอของ "อุ้ย" — โฟกัสเว็บที่ใช้งานง่าย เร็ว และเข้าถึงได้</p>
       <p class="en">Auy’s portfolio — focused on usable, fast, and accessible web.</p>
 
       <ul class="mini-list">
@@ -533,9 +531,9 @@
     <div class="footer-col">
       <h4 class="gradient-text">Contact</h4>
       <ul class="info-list">
-        <li><a href="mailto:you@example.com">you@example.com</a></li>
-        <li><a href="https://github.com/your-github" target="_blank" rel="noopener">GitHub</a></li>
-        <li><a href="https://www.linkedin.com/in/your-linkedin" target="_blank" rel="noopener">LinkedIn</a></li>
+        <li><a href="mailto:watcharapol.m@ku.th">watcharapol.m@ku.th</a></li>
+        <li><a href="https://github.com/Watchrapol" target="_blank" rel="noopener">GitHub</a></li>
+        <li><a href="https://www.linkedin.com/in/watcharapol-mattayatsuk-57503b383/" target="_blank" rel="noopener">LinkedIn</a></li>
       </ul>
       <div class="footer-actions">
         <button class="btn outline back-to-top" type="button">↑ Back to top</button>
