--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
 
             <!-- RIGHT : Form -->
             <!-- วิธีส่ง 2 แบบ: (A) Formspree/บริการฟอร์ม หรือ (B) mailto fallback -->
-            <form id="contactForm" class="contact-form" method="POST" action="https://formspree.io/f/YOUR_FORM_ID">
+            <form id="contactForm" class="contact-form" method="POST" action="https://formspree.io/f/meolnqbb">
                 <!-- ใส่ Formspree ID หรือเปลี่ยนตามบริการที่ใช้ -->
                 <div class="field">
                     <label for="name">ชื่อ / Name</label>
