--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="index.css" />
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 
-
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-T04HZW5ERC"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js" defer></script>
     <script src="script.js" defer></script>
 </head>
@@ -366,8 +366,10 @@
                         clean, extensible code.
                     </p>
                     <div class="actions">
-                        <a class="btn" href="https://watchrapol.github.io/Portfolio/" target="_blank" rel="noopener">Live ↗</a>
-                        <a class="btn" href="https://github.com/Watchrapol/Portfolio.git" target="_blank" rel="noopener">Code</a>
+                        <a class="btn" href="https://watchrapol.github.io/Portfolio/" target="_blank"
+                            rel="noopener">Live ↗</a>
+                        <a class="btn" href="https://github.com/Watchrapol/Portfolio.git" target="_blank"
+                            rel="noopener">Code</a>
                     </div>
                 </div>
             </article>
@@ -489,7 +491,8 @@
                 <div class="field">
                     <label for="message">ข้อความ / Message</label>
                     <textarea id="message" name="message" rows="6"
-                        placeholder="เล่ารายละเอียดคร่าว ๆ ได้เลยครับ (งบ/เส้นตาย/ตัวอย่างเว็บที่ชอบ).    /Feel free to share brief details (budget/deadline/example sites you like)." required></textarea>
+                        placeholder="เล่ารายละเอียดคร่าว ๆ ได้เลยครับ (งบ/เส้นตาย/ตัวอย่างเว็บที่ชอบ).    /Feel free to share brief details (budget/deadline/example sites you like)."
+                        required></textarea>
                 </div>
 
                 <div class="form-actions">
@@ -502,49 +505,50 @@
         </div>
     </section>
 
-   <footer id="footer" class="site-footer">
-  <div class="footer-grid">
-    <!-- Brand / About -->
-    <div class="footer-col">
-      <div class="logo">AuyDev</div>
-      <p class="th">พอร์ตโฟลิโอของ "อุ้ย" — โฟกัสเว็บที่ใช้งานง่าย เร็ว และเข้าถึงได้</p>
-      <p class="en">Auy’s portfolio — focused on usable, fast, and accessible web.</p>
+    <footer id="footer" class="site-footer">
+        <div class="footer-grid">
+            <!-- Brand / About -->
+            <div class="footer-col">
+                <div class="logo">AuyDev</div>
+                <p class="th">พอร์ตโฟลิโอของ "อุ้ย" — โฟกัสเว็บที่ใช้งานง่าย เร็ว และเข้าถึงได้</p>
+                <p class="en">Auy’s portfolio — focused on usable, fast, and accessible web.</p>
 
-      <ul class="mini-list">
-        <li><span>Alumni:</span> Kasetsart University (KU CSC)</li>
-        <li><span>Based in:</span> Sakon Nakhon, Thailand</li>
-      </ul>
-    </div>
+                <ul class="mini-list">
+                    <li><span>Alumni:</span> Kasetsart University (KU CSC)</li>
+                    <li><span>Based in:</span> Sakon Nakhon, Thailand</li>
+                </ul>
+            </div>
 
-    <!-- Quick Links -->
-    <nav class="footer-col">
-      <h4 class="gradient-text">Links</h4>
-      <ul class="link-list">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Portfolio</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+            <!-- Quick Links -->
+            <nav class="footer-col">
+                <h4 class="gradient-text">Links</h4>
+                <ul class="link-list">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#projects">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
 
-    <!-- Contact -->
-    <div class="footer-col">
-      <h4 class="gradient-text">Contact</h4>
-      <ul class="info-list">
-        <li><a href="mailto:watcharapol.m@ku.th">watcharapol.m@ku.th</a></li>
-        <li><a href="https://github.com/Watchrapol" target="_blank" rel="noopener">GitHub</a></li>
-        <li><a href="https://www.linkedin.com/in/watcharapol-mattayatsuk-57503b383/" target="_blank" rel="noopener">LinkedIn</a></li>
-      </ul>
-      <div class="footer-actions">
-        <button class="btn outline back-to-top" type="button">↑ Back to top</button>
-      </div>
-    </div>
-  </div>
+            <!-- Contact -->
+            <div class="footer-col">
+                <h4 class="gradient-text">Contact</h4>
+                <ul class="info-list">
+                    <li><a href="mailto:watcharapol.m@ku.th">watcharapol.m@ku.th</a></li>
+                    <li><a href="https://github.com/Watchrapol" target="_blank" rel="noopener">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/in/watcharapol-mattayatsuk-57503b383/" target="_blank"
+                            rel="noopener">LinkedIn</a></li>
+                </ul>
+                <div class="footer-actions">
+                    <button class="btn outline back-to-top" type="button">↑ Back to top</button>
+                </div>
+            </div>
+        </div>
 
-  <div class="footer-bottom">
-    <small>© <span id="year"></span> Watcharapol Mattayatsuk · Built by hand with HTML/CSS/JS</small>
-  </div>
-</footer>
+        <div class="footer-bottom">
+            <small>© <span id="year"></span> Watcharapol Mattayatsuk · Built by hand with HTML/CSS/JS</small>
+        </div>
+    </footer>
 
 </body>
 
