add thanawan stat kku

--- a/index.html
+++ b/index.html
@@ -345,7 +345,26 @@
     <h1 class="sub-title rerun" id="projects">My<span class="gradient-text">Portfolio</span></h1>
     <section id="projects" class="portfolio overlay-cards">
         <div class="overlay-grid">
-            <!-- 1) พอร์ตนี้ (หลัก) -->
+
+ <!-- 1) พอร์ตนี้ (หลัก) -->
+            <article class="zoom-card featured">
+                <a class="media" href="https://watchrapol.github.io/Portfolio/" target="_blank" rel="noopener">
+                    <img src="images/Thanawan stat kku.png" alt="Thanawan stat kku">
+                </a>
+                <div class="overlay">
+                    <h3>Thanawan • STAT KKU</h3>
+                    <p class="th">เว็บไซต์อย่างเป็นทางการของ ผศ.ดร.ธนาวัลย์ ประหาดไชย (Thanawan Prahadchai) อาจารย์ประจำสาขาสถิติ คณะวิทยาศาสตร์ มหาวิทยาลัยขอนแก่น นำเสนอผลงานวิจัยด้านเหตุการณ์สุดขั้ว การวิเคราะห์ความถี่เชิงภูมิภาค (RFA) และวิธีเชิงสถิติ/ปัญญาประดิษฐ์สำหรับข้อมูลภูมิอากาศและอุทกวิทยา รวมทั้งเนื้อหาการสอน ข่าวประกาศ และช่องทางความร่วมมือทางวิชาการ
+                    </p>
+                    <p class="en">Official site of Asst. Prof. Dr. Thanawan Prahadchai, Department of Statistics, Faculty of Science, Khon Kaen University. The site features research on Extreme Events, Regional Frequency Analysis (RFA), and statistical/AI methods for climate and hydrological data, along with teaching materials, announcements, and collaboration opportunities.
+                    </p>
+                    <div class="actions">
+                        <a class="btn" href="https://watchrapol.github.io/Thanawan_statistics-KKU/" target="_blank"
+                            rel="noopener">Live ↗</a>
+                    </div>
+                </div>
+            </article>
+
+            <!-- 2) พอร์ตนี้ (หลัก) -->
             <article class="zoom-card featured">
                 <a class="media" href="https://watchrapol.github.io/Portfolio/" target="_blank" rel="noopener">
                     <img src="images/Portfolio-html-css-Js.png" alt="AuyDev Portfolio (HTML/CSS/JS)">
@@ -374,7 +393,7 @@
                 </div>
             </article>
 
-            <!-- 2) Sloth Bar Coffee -->
+            <!-- 3) Sloth Bar Coffee -->
             <article class="zoom-card">
                 <a class="media" href="https://watchrapol.github.io/Sloth_Bar/" target="_blank" rel="noopener">
                     <img src="images/Sloth bar.png" alt="Sloth Bar Coffee Landing Page">
@@ -393,7 +412,7 @@
                 </div>
             </article>
 
-            <!-- 3) Portfolio v1 (Google Sites) -->
+            <!-- 4) Portfolio v1 (Google Sites) -->
             <article class="zoom-card">
                 <a class="media" href="https://sites.google.com/ku.th/watcharapol-m" target="_blank" rel="noopener">
                     <img src="images/Portfolio-site.png" alt="Portfolio v1 on Google Sites">
