--- a/index.html
+++ b/index.html
@@ -295,6 +295,27 @@
                         <span></span>
                     </div>
                 </div>
+
+                <div class="bar">
+                    <i5 class="bx bx-terminal"></i5>   <!-- เทอร์มินัล/โค้ด -->
+                    <div class="info">
+                        <span>Arduino</span>
+                    </div>
+                    <div class="progress-line arduino rerun">
+                        <span></span>
+                    </div>
+                </div>
+
+                <div class="bar">
+                    <i6 class="bx bx-cube"></i6>   <!-- เทอร์มินัล/โค้ด -->
+                    <div class="info">
+                        <span>3D/CAD</span>
+                    </div>
+                    <div class="progress-line cad rerun">
+                        <span></span>
+                    </div>
+                </div>
+
             </div>
         </div>
 
@@ -346,16 +367,23 @@
     <section id="projects" class="portfolio overlay-cards">
         <div class="overlay-grid">
 
- <!-- 1) พอร์ตนี้ (หลัก) -->
+            <!-- 1) พอร์ตนี้ (หลัก) -->
             <article class="zoom-card featured">
                 <a class="media" href="https://watchrapol.github.io/Portfolio/" target="_blank" rel="noopener">
                     <img src="images/Thanawan stat kku.png" alt="Thanawan stat kku">
                 </a>
                 <div class="overlay">
                     <h3>Thanawan • STAT KKU</h3>
-                    <p class="th">เว็บไซต์อย่างเป็นทางการของ ผศ.ดร.ธนาวัลย์ ประหาดไชย (Thanawan Prahadchai) อาจารย์ประจำสาขาสถิติ คณะวิทยาศาสตร์ มหาวิทยาลัยขอนแก่น นำเสนอผลงานวิจัยด้านเหตุการณ์สุดขั้ว การวิเคราะห์ความถี่เชิงภูมิภาค (RFA) และวิธีเชิงสถิติ/ปัญญาประดิษฐ์สำหรับข้อมูลภูมิอากาศและอุทกวิทยา รวมทั้งเนื้อหาการสอน ข่าวประกาศ และช่องทางความร่วมมือทางวิชาการ
+                    <p class="th">เว็บไซต์อย่างเป็นทางการของ ผศ.ดร.ธนาวัลย์ ประหาดไชย (Thanawan Prahadchai)
+                        อาจารย์ประจำสาขาสถิติ คณะวิทยาศาสตร์ มหาวิทยาลัยขอนแก่น นำเสนอผลงานวิจัยด้านเหตุการณ์สุดขั้ว
+                        การวิเคราะห์ความถี่เชิงภูมิภาค (RFA)
+                        และวิธีเชิงสถิติ/ปัญญาประดิษฐ์สำหรับข้อมูลภูมิอากาศและอุทกวิทยา รวมทั้งเนื้อหาการสอน ข่าวประกาศ
+                        และช่องทางความร่วมมือทางวิชาการ
                     </p>
-                    <p class="en">Official site of Asst. Prof. Dr. Thanawan Prahadchai, Department of Statistics, Faculty of Science, Khon Kaen University. The site features research on Extreme Events, Regional Frequency Analysis (RFA), and statistical/AI methods for climate and hydrological data, along with teaching materials, announcements, and collaboration opportunities.
+                    <p class="en">Official site of Asst. Prof. Dr. Thanawan Prahadchai, Department of Statistics,
+                        Faculty of Science, Khon Kaen University. The site features research on Extreme Events, Regional
+                        Frequency Analysis (RFA), and statistical/AI methods for climate and hydrological data, along
+                        with teaching materials, announcements, and collaboration opportunities.
                     </p>
                     <div class="actions">
                         <a class="btn" href="https://watchrapol.github.io/Thanawan_statistics-KKU/" target="_blank"
